2015-04-06  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el: Fix lack of "new" packages.
	(package-menu--new-package-list)
	(package-menu--old-archive-contents): No longer local.
	(package-menu--list-to-prompt): New function.
	(package-menu--prompt-transaction-p): Use "Upgrade" to make the
	package-menu-execute prompt less verbose.

2015-04-06  Paul Eggert  <eggert@cs.ucla.edu>

	Spelling fix for 'hfy-optimizations'
	* htmlfontify.el (hfy-optimizations): Rename from hfy-optimisations,
	with an obsolete alias.  All uses changed.

2015-04-06  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	python.el: Enhance docstring detection following PEP-257.

	* progmodes/python.el (python-docstring-at-p): Remove function.
	(python-info-assignment-statement-p): New function.
	(python-info-assignment-continuation-line-p): Use it.
	(python-info-docstring-p): New function.
	(python-font-lock-syntactic-face-function)
	(python-fill-string): Use it.

2015-04-05  Eli Zaretskii  <eliz@gnu.org>

	* ses.el (ses-sym-rowcol): Move up, before the first use, to avoid
	byte-compiler warnings.

2015-04-05  Alan Mackenzie  <acm@muc.de>

	* jit-lock.el (jit-lock-after-change): Widen the buffer only
	whilst putting the 'fontified text properties.

2015-04-05  Alan Mackenzie  <acm@muc.de>

	Rationalize use of c[ad]+r, expunging cl-c[ad]\{3,4\}r.
	Also expunge eudc-c[ad]+r.

	* subr.el (internal--compiler-macro-cXXr): "New" function, copied
	from cl--compiler-macro-cXXr.
	(caar, cadr, cdar, cddr): Changed from defsubsts to defuns with
	the above compiler-macro.

	* net/eudc.el (eudc-cadr, eudc-cdar, eudc-caar, eudc-cdaar): Remove.

	* emacs-lisp/cl.el (Top level dolist doing defaliases): Remove
	caaar, etc., from list of new alias functions.

	* emacs-lisp/cl-lib.el (cl-caaar, etc): Rename to caaar, etc.
	(gen-cXXr--rawname, gen-cXXr-all-cl-aliases): New function/macro
	which generate obsolete cl- aliases for caaar, etc.  Invoke them.

	* desktop.el:
	* edmacro.el: